k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: database
  template:
    metadata:
      labels:
        name: database
    spec:
      volumes:
        - name: database-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: database
          image: postgres:12
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: database-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
