k8s/app-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: app-cluster-ip
spec:
  type: ClusterIP
  selector:
    name: app
  ports:
    - port: 8080
      targetPort: 8080
