k8s/database-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-cluster-ip
spec:
  type: ClusterIP
  selector:
    name: database
  ports:
    - port: 5432
      targetPort: 5432
